# PumpPal

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker.yml
src/pumppal/: agent.py  bot.py  logging_setup.py  main.py  settings.py  state.py  webhook.py
src/pumppal/hevy/: client.py  models.py
